Refactoring blog HTML and CSS. Making other miscellaneous CSS/HTML fixes. Fixing hero section spacing.

--- a/www/static/css-src/_home.scss
+++ b/www/static/css-src/_home.scss
@@ -11,7 +11,7 @@ html {
 
 #hero {
 	height:1020px;
-	background-color:$gray-transparent;
+	background-color: $gray-transparent;
     background-image: url("{{ site.baseurl }}/static/img/wisplight.jpg");
     background-size: cover;
 	position:relative;
@@ -40,12 +40,26 @@ html {
 			    font-weight: bold;
 			}
 		}
+        .btn {
+            margin-bottom: 3px;
+        }
 	}
 	.hero_logo {
 		width:100%;
 		padding-top:40px;
 		padding-bottom:20px;
 	}
+}
+
+@media (min-width: $screen-sm-min) {
+    #hero #hero_section .btn + .btn {
+        margin-left: 3px;
+    }
+}
+@media (max-width: $screen-xs-max) {
+    #hero #hero_section_right p {
+        margin-bottom: 20px;
+    }
 }
 
 #hero_bottom_strip {
